# personal-site

./: LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vue.config.js
src/: App.vue  index.html  main.js
src/assets/: github-icon.svg:Zone.Identifier  youtube-icon.svg:Zone.Identifier
src/components/: Links.vue  Mastodon.vue  ProjectShelf.vue  ProjectShowcase.vue  Shelf.vue  Showcase.vue  Topbar.vue
src/pages/Home/: App.vue
src/pages/Projects/: App.vue  main.js
src/plugins/: vuetify.js
src/router/: index.js
src/views/: About.vue  Blog.vue  Home.vue  HomeView.vue  MainContainer.vue
